# cnpg-mcp

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  FASTMCP_MIGRATION.md  HELM_AND_MAKEFILE_SUMMARY.md  HELM_DEPLOYMENT_GUIDE.md  HTTP_TRANSPORT_GUIDE.md  LICENSE  MANIFEST.in  Makefile  OIDC_SETUP.md  QUICKSTART.md  RBAC_DATABASE_FIX.md  README.md  README_TEST_INSPECTOR.md  RELEASE_NOTES_v1.2.0.md  SMITHERY_READY.md  add-user-to-allowed-clients.py  auth_oidc.py  cnpg_mcp_server.py  example-cluster.yaml  fix-user-auth-connection.py  get-user-token.py  kubernetes-deployment-oidc.yaml  mcp-auth-proxy.py  pyproject.toml  rbac-database.yaml  requirements.txt  setup.py  smithery.json  smithery.yaml  start-http.sh  test-docker-start.sh  test-inspector-start.sh  test-inspector.py  test-inspector.sh  test.sh  test_list_clusters.py
.devcontainer/: Dockerfile  devcontainer.json  init.sh  post-create.sh
chart/: Chart.yaml  cnpg-mcp-1.0.0.tgz  values.yaml
chart/cnpg-mcp/: Chart.yaml  values.yaml
chart/templates/: configmap.yaml  deployment.yaml  ingress.yaml  rolebinding.yaml
rbac/: QUICKSTART.md  RBAC_SETUP_GUIDE.md  README.md  bind_cnpg_role.py
src/: auth_fastmcp.py  auth_oidc.py  cnpg_mcp_server.py  cnpg_mcp_test_server.py  cnpg_tools.py  user_hash.py
test/: get-user-token.py  mcp-auth-proxy.py  test-inspector-start.sh  test-inspector.py  test-inspector.sh  test-mcp.py
test/plugins/: __init__.py  test_cleanup_cluster.py  test_create_postgres_cluster.py  test_create_postgres_database.py  test_create_postgres_role.py  test_delete_postgres_cluster.py  test_delete_postgres_database.py  test_delete_postgres_role.py  test_get_cluster_status.py  test_list_clusters.py  test_list_databases.py  test_list_roles.py  test_scale_postgres_cluster.py  (+2 more)
(+2 files in other folders)
